# ThreeFilterToNormal

c_code/: CMakeLists.txt
c_code/example/: demo.cpp
c_code/include/tftn/: tftn.cpp
src_cpp/: .gitignore  CMakeLists.txt  depth_to_mesh.cpp  depth_to_mesh.hpp  main.cpp
